# routes/api.php
@@ -7,4 +7,9 @@ Route::group(['namespace'=>'ClientApi'],function (){
      */
     Route::get('/product/search/{keyword}/{limit?}/{page?}','ProductController@search');
     Route::get('/product/show/{item_id}/{coupon_id}','ProductController@show');
+    /**
+     * 用户路由
+     */
+    Route::resource('/user','UserController');
+    Route::post('/login','UserController@login');
 });
